--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
         <footer>
             <div class="footer-section">
                 <h2>About company</h2>
-                <p>Four or five lines short description about the <br>company which provides product or service.</p>
+                <span>Four or five lines short description about the <br>company which provides product or service.</span>
             </div>
             <div class="footer-section">
                 <h2>Contact Information</h2>
                 <div class="footer-icon">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:info@companyname.com">info@companyname.com</a>
+                    <span href="mailto:info@companyname.com">info@companyname.com</>
                 </div>
                 <div class="footer-icon">
                     <i class="fas fa-phone-alt"></i>
@@ -258,6 +258,17 @@
                 <div class="footer-icon">
                     <i class="fas fa-map-marker-alt"></i>
                     <span>Jl. Gedong Kun. 5, Ambarketawang, Gamping, Sleman</span>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h2>Legal Pages</h2>
+                <div>
+                    <ul>
+                        <li>Terms of use</li>
+                        <li>Disclaimer</li>
+                        <li>Provacy Policy</li>
+                        <li>Cookie Policy</li>
+                    </ul>
                 </div>
             </div>
         </footer>
