fix image path case sensitivity for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         <div class="navbar-container">
             <div class="navbar">
                 <div class="navbar-brand">
-                    <img src="Img/avatar.png" alt="Avatar" />
+                    <img src="img/avatar.png" alt="Avatar" />
                     <span>Soraya's Lab</span>
                 </div>
                 <div class="navbar-links">
                     <div class="navlink-button">
-                        <img src="Img/icon-dark.png" alt="">
+                        <img src="img/icon-dark.png" alt="">
                         <a href="#">Home</a>
                     </div>
                     <div class="navlink-button">
-                        <img src="Img/icon-dark.png" alt="">
+                        <img src="img/icon-dark.png" alt="">
                         <a href="#">About</a>
                     </div>
                     <div class="navlink-button">
-                        <img src="Img/icon-dark.png" alt="">
+                        <img src="img/icon-dark.png" alt="">
                         <a href="#">Service</a>
                     </div>
                     <div class="navlink-button">
-                        <img src="Img/icon-dark.png" alt="">
+                        <img src="img/icon-dark.png" alt="">
                         <a href="#">Contact</a>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
             <h1>Soraya’s Lab</h1>
             <p>Sed do eiusmod tempor incididunt ut labore et dolore magna ali</p>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</p>
-            <button class="cta"><span><img src="Img/icon-light.png" alt=""></span> CTA Button</button>
+            <button class="cta"><span><img src="img/icon-light.png" alt=""></span> CTA Button</button>
         </div>
 
         <div class="google-review">
@@ -68,7 +68,7 @@
                 <p>sint occaecat cupid</p>
             </div>
             <div  class="introduce-video">
-                <img src="Img/tempat-vide.png" alt="">
+                <img src="img/tempat-vide.png" alt="">
             </div>
         </div>
 
@@ -77,7 +77,7 @@
             <div class="benefit-container">
                 <div class="card-container">
                     <div class="card-title">
-                        <img src="Img/Icon-BENEFIT.png" alt="">
+                        <img src="img/Icon-BENEFIT.png" alt="">
                         <h2>Unt in culpa qui officia </h2>
                     </div>
                     <div class="card-list">
@@ -94,7 +94,7 @@
                 <div class="card-separator1"></div>
                 <div class="card-container">
                     <div class="card-title">
-                        <img src="Img/Icon-BENEFIT.png" alt="">
+                        <img src="img/Icon-BENEFIT.png" alt="">
                         <h2>Unt in culpa qui officia </h2>
                     </div>
                     <div class="card-list">
@@ -111,7 +111,7 @@
                 <div class="card-separator2"></div>
                 <div class="card-container">
                     <div class="card-title">
-                        <img src="Img/Icon-BENEFIT.png" alt="">
+                        <img src="img/Icon-BENEFIT.png" alt="">
                         <h2>Unt in culpa qui officia </h2>
                     </div>
                     <div class="card-list">
@@ -129,7 +129,7 @@
             <div class="benefit-container">
                 <div class="card-container">
                     <div class="card-title">
-                        <img src="Img/Icon-BENEFIT.png" alt="">
+                        <img src="img/Icon-BENEFIT.png" alt="">
                         <h2>Unt in culpa qui officia </h2>
                     </div>
                     <div class="card-list">
@@ -146,7 +146,7 @@
                 <div class="card-separator1"></div>
                 <div class="card-container">
                     <div class="card-title">
-                        <img src="Img/Icon-BENEFIT.png" alt="">
+                        <img src="img/Icon-BENEFIT.png" alt="">
                         <h2>Unt in culpa qui officia </h2>
                     </div>
                     <div class="card-list">
@@ -163,7 +163,7 @@
                 <div class="card-separator2"></div>
                 <div class="card-container">
                     <div class="card-title">
-                        <img src="Img/Icon-BENEFIT.png" alt="">
+                        <img src="img/Icon-BENEFIT.png" alt="">
                         <h2>Unt in culpa qui officia </h2>
                     </div>
                     <div class="card-list">
@@ -184,25 +184,25 @@
             <h1>Customer testimonial</h1>
             <div class="customer-container">
                 <div class="cust-card">
-                    <img src="Img/customer.png" alt="">
+                    <img src="img/customer.png" alt="">
                     <h2>Name</h2>
                     <h3>Company - Title</h3>
                     <p>Neque porro quisquam est, qui dolorem</p>
                 </div>
                 <div class="cust-card">
-                    <img src="Img/customer.png" alt="">
+                    <img src="img/customer.png" alt="">
                     <h2>Name</h2>
                     <h3>Company - Title</h3>
                     <p>Neque porro quisquam est, qui dolorem</p>
                 </div>
                 <div class="cust-card">
-                    <img src="Img/customer.png" alt="">
+                    <img src="img/customer.png" alt="">
                     <h2>Name</h2>
                     <h3>Company - Title</h3>
                     <p>Neque porro quisquam est, qui dolorem</p>
                 </div>
                 <div class="cust-card">
-                    <img src="Img/customer.png" alt="">
+                    <img src="img/customer.png" alt="">
                     <h2>Name</h2>
                     <h3>Company - Title</h3>
                     <p>Neque porro quisquam est, qui dolorem</p>
@@ -236,7 +236,7 @@
                 <p>sint occaecat cupid</p>
             </div>
             <div  class="attract-video">
-                <button class="cta"><span><img src="Img/icon-light.png" alt=""></span> CTA Button</button>
+                <button class="cta"><span><img src="img/icon-light.png" alt=""></span> CTA Button</button>
             </div>
         </div>
 
